--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
+      - name: Install golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.58.1   # or "latest"
+          args: --timeout=5m
+
       - name: Make ci
         run: make ci
 
