--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,8 +28,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.25.x'
+          go-version: '1.22.x'
           check-latest: true
+
+      # Prevent auto toolchain switching (e.g., from a stray toolchain directive)
+      - name: Pin toolchain
+        run: echo "GOTOOLCHAIN=local" >> $GITHUB_ENV
 
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -44,8 +48,11 @@ jobs:
       - name: Install golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.58.1   # or "latest"
-          args: --timeout=5m
+          version: v1.58.1
+          args: version
+
+      - name: Clean Go build caches
+        run: go clean -cache -modcache -testcache
 
       - name: Make ci
         run: make ci
