--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,8 +51,8 @@ jobs:
       - name: Clean Go build caches
         run: go clean -cache -modcache -testcache
 
-      - name: Make ci-full
-        run: make ci-full
+      - name: Make ci
+        run: make ci
 
       - name: Upload coverage artifacts
         uses: actions/upload-artifact@v4
@@ -98,4 +98,4 @@ jobs:
         with:
           name: integration-logs
           path: |
-            .itest_server.log
+            ${{ github.workspace }}/.itest_server.log
